###############################
3.0.1
  * Fixed importation of Nagios status file in the editor
  * Added ability to import Zabbix triggers and Zenoss components
    from the editor
  * Fixed problem in mono-source handling when the description
    file-defined source type was overriden by the setting source type
  * Simplified monitoring-data retrieving with Zabbix and Zenoss

3.0.0
  * Changed command line names: ngrt4n-oc -> realopinsight-oc, 
    ngrt4n-manager -> realopinsight-manager, ngrt4n-editor -> 
    realopinsight-editor
  * Fixed chart tooltip, severity ratios were not well built
  * Fixed Editor file open when the name of the root service is altered
  * Change the name of the field use_ls in setting file to use_ngrt4nd
  * Fixed time display in the message console, now print human-readable
    date instead of time_t
  * Updated french translation

3.0.0b1 (Eliana, b1)
  * Lot of refactoring and code simplification
  * Port to Qt 5.x
  * Livestatus is now the default mode selected for retrieving monitoring data
    when setting Nagios-based sources. The use of ngrt4nd needs to be explicitly
    enabled
  * Fixed ticket #25 enabling the ability to cancel the basic authentication for
    Nagios
  * Fixed close action on preference window (ticket #24)
  * Moved piechart from the map to lelf side
  * Improved charting rendering: cleanup and new algorithm
  * Changed default operations console size to 1024 x 768
  * Fixed ticket #27 when events are not well propagated
  * IMPORTANT implicit check name for ping is not longer supported, the user
    is now required to set that. E.g. mysql-server/ping
  * Restyling the menu bar

2.4.0 (Federator) - 08/09/2013
  * Fixed ticket #22 : Operations Console doesn't update the status of triggers
    with Zabbix API v1.4 (Zabbix 2.0.x, x<5)
  * Fixed close action on the preference window (ticket #24)

2.4.0 (Federator) - 08/09/2013
  * Fixed compilation issue on OS X related to basename and QString (ticket #20)