@@ -37,23 +37,23 @@ GuiPreferences::GuiPreferences(qint32 _userRole, qint32 _formType)
 {
   switch (_formType)
   {
-    case Preferences::ChangeMonitoringSettings:
-      createPreferenceWindow();
-      break;
-    case Preferences::ChangePassword:
-    case Preferences::ForceChangePassword:
-      createChangePasswordForm();
-      break;
-    case Preferences::ShowAbout:
-      organizeAbortWindow();
-      break;
-    case Preferences::BasicLoginForm:
-      loadBasicLoginForm();
-      break;
-    case NoForm:
-      break;
-    default:
-      break;
+  case Preferences::ChangeMonitoringSettings:
+    createPreferenceWindow();
+    break;
+  case Preferences::ChangePassword:
+  case Preferences::ForceChangePassword:
+    createChangePasswordForm();
+    break;
+  case Preferences::ShowAbout:
+    organizeAbortWindow();
+    break;
+  case Preferences::BasicLoginForm:
+    loadBasicLoginForm();
+    break;
+  case NoForm:
+    break;
+  default:
+    break;
   }
   addEvents();
 }
@@ -62,35 +62,35 @@ GuiPreferences::GuiPreferences(qint32 _userRole, qint32 _formType)
 GuiPreferences::~GuiPreferences()
 {
   switch(m_formType) {
-    case ChangeMonitoringSettings:
-      delete m_monitorTypeField;
-      delete m_monitorUrlField;
-      delete m_updateIntervalField;
-      delete m_applySettingBtn;
-      delete m_addAsSourceBtn;
-      delete m_deleteSourceBtn;
-      delete m_sockAddrField;
-      delete m_sockPortField;
-      delete m_serverPassField;
-      delete m_showAuthInfoChkbx;
-      delete m_useNgrt4ndChkbx;
-      delete m_verifySslPeerChkBx;
-      break;
-    case ChangePassword:
-      delete m_oldPwdField;
-      delete m_pwdField;
-      delete m_rePwdField;
-      delete m_changePwdBtn;
-      break;
-    case BasicLoginForm:
-      delete m_realmLoginField;
-      delete m_realmPasswdField;
-      break;
-    case ShowAbout:
-      delete m_donateBtn;
-      break;
-    default:
-      break;
+  case ChangeMonitoringSettings:
+    delete m_monitorTypeField;
+    delete m_monitorUrlField;
+    delete m_updateIntervalField;
+    delete m_applySettingBtn;
+    delete m_addAsSourceBtn;
+    delete m_deleteSourceBtn;
+    delete m_sockAddrField;
+    delete m_sockPortField;
+    delete m_serverPassField;
+    delete m_showAuthInfoChkbx;
+    delete m_useNgrt4ndChkbx;
+    delete m_verifySslPeerChkBx;
+    break;
+  case ChangePassword:
+    delete m_oldPwdField;
+    delete m_pwdField;
+    delete m_rePwdField;
+    delete m_changePwdBtn;
+    break;
+  case BasicLoginForm:
+    delete m_realmLoginField;
+    delete m_realmPasswdField;
+    break;
+  case ShowAbout:
+    delete m_donateBtn;
+    break;
+  default:
+    break;
   }
   delete m_cancelBtn;
   delete m_mainLayout;
@@ -102,19 +102,19 @@ GuiPreferences::~GuiPreferences()
 void GuiPreferences::show(void)
 {
   switch(m_formType) {
-    case ChangePassword:
-      m_oldPwdField->setText("");
-      m_pwdField->setText("");
-      m_rePwdField->setText("");
-      break;
-    case ChangeMonitoringSettings:
-      break;
-    case BasicLoginForm:
-      break;
-    case ShowAbout:
-      break;
-    default:
-      break;
+  case ChangePassword:
+    m_oldPwdField->setText("");
+    m_pwdField->setText("");
+    m_rePwdField->setText("");
+    break;
+  case ChangeMonitoringSettings:
+    break;
+  case BasicLoginForm:
+    break;
+  case ShowAbout:
+    break;
+  default:
+    break;
   }
   m_dialog->show();
 }
@@ -155,17 +155,11 @@ void GuiPreferences::updateAllSourceWidgetStates(void)
 
 void GuiPreferences::handleCancel(void)
 {
-  switch(m_formType) {
-    case ChangeMonitoringSettings:
-      Q_EMIT sourcesChanged(m_updatedSources);
-      break;
-    case BasicLoginForm:
-      break;
-    default:
-      break;
-  }
   m_cancelled = true;
   m_dialog->done(0);
+  if (m_formType == ChangeMonitoringSettings) {
+    Q_EMIT sourcesChanged(m_updatedSources);
+  }
 }
 
 void GuiPreferences::createPreferenceWindow(void)
@@ -587,14 +581,14 @@ void GuiPreferences::applyChanges(void)
   int curIndex = currentSourceIndex();
   if (curIndex >= 0) {
     switch(m_formType) {
-      case ChangeMonitoringSettings:
-        saveAsSource(curIndex, selectSourceType());
-        break;
-      case BasicLoginForm:
-        m_dialog->done(0);
-        break;
-      default:
-        break;
+    case ChangeMonitoringSettings:
+      saveAsSource(curIndex, selectSourceType());
+      break;
+    case BasicLoginForm:
+      m_dialog->done(0);
+      break;
+    default:
+      break;
     }
   } else {
     ngrt4n::alert("No source selected");
@@ -642,21 +636,21 @@ void GuiPreferences::addEvents(void)
   connect(m_cancelBtn, SIGNAL(clicked()), this, SLOT(handleCancel()));
 
   switch(m_formType) {
-    case ChangeMonitoringSettings:
-      QObject::connect(m_applySettingBtn, SIGNAL(clicked()),  this, SLOT(applyChanges()));
-      connect(m_addAsSourceBtn, SIGNAL(clicked()), this, SLOT(addAsSource()));
-      connect(m_deleteSourceBtn, SIGNAL(clicked()), this, SLOT(deleteSource()));
-      connect(m_showAuthInfoChkbx, SIGNAL(stateChanged(int)), this, SLOT(setAuthChainVisibility(int)));
-      break;
-    case ChangePassword:
-      connect(m_changePwdBtn, SIGNAL(clicked()),  this, SLOT(changePasswd()));
-      break;
-    case ShowAbout:
-      connect(m_donateBtn, SIGNAL(clicked()),  this, SLOT(handleDonate()));
-      break;
-    case BasicLoginForm:
-      break;
-    default:
-      break;
+  case ChangeMonitoringSettings:
+    QObject::connect(m_applySettingBtn, SIGNAL(clicked()),  this, SLOT(applyChanges()));
+    connect(m_addAsSourceBtn, SIGNAL(clicked()), this, SLOT(addAsSource()));
+    connect(m_deleteSourceBtn, SIGNAL(clicked()), this, SLOT(deleteSource()));
+    connect(m_showAuthInfoChkbx, SIGNAL(stateChanged(int)), this, SLOT(setAuthChainVisibility(int)));
+    break;
+  case ChangePassword:
+    connect(m_changePwdBtn, SIGNAL(clicked()),  this, SLOT(changePasswd()));
+    break;
+  case ShowAbout:
+    connect(m_donateBtn, SIGNAL(clicked()),  this, SLOT(handleDonate()));
+    break;
+  case BasicLoginForm:
+    break;
+  default:
+    break;
   }
 }
